# statislib

./: CMakeLists.txt  LICENSE  README.md
doc/: beta_distribution.md  binomial_distribution.md  exponential_distribution.md  gamma_distribution.md  geometric_distribution.md  hypgeometric_distribution.md  logarithmic_distribution.md  negbinomial_distribution.md  normal_distribution.md  poisson_distribbution.md  uniform_distribution.md
src/: CMakeLists.txt  beta_distribution.fypp  binomial_distribution.fypp  common.fypp  exponential_distribution.fypp  gamma_distribution.fypp  geometric_distribution.fypp  hypergeometric_distribution.fypp  logarithmic_distribution.fypp  negbinomial_distribution.fypp  normal_distribution.fypp  poisson_distribution.fypp  special_function.f90  special_function.fypp  statislib.fypp  uniform_distribution.fypp
tests/: CMakeLists.txt  test_beta.fypp  test_binomial.fypp  test_exponential.fypp  test_gamma.fypp  test_geometric.fypp  test_hypergeometric.fypp  test_hypgeo.fypp  test_logarithmic.fypp  test_negbinomial.fypp  test_normal.f90  test_normal.fypp  test_poisson.fypp  test_uniform.fypp
